# anonymous-transactions

./: .gitignore  Cargo.toml  LICENSE  README.md
demo/: Cargo.toml
demo/src/: blockchain.rs  commands.rs  constants.rs  lib.rs  user_input.rs
primitives/: Cargo.toml
primitives/src/: commitments.rs  constants.rs  crhs.rs  definitions.rs  encryption.rs  group_hash.rs  lib.rs  merkle_trees.rs  pedersen_hash.rs  prfs.rs  saver.rs  serialise.rs  signature.rs
proofs/: Cargo.toml
proofs/src/: commitments.rs  constants.rs  crhs.rs  ecc.rs  helper_functions.rs  lib.rs  merkle_trees.rs  pedersen_hash.rs  prfs.rs  saver.rs
proofs/src/convert_from/: circuit.rs  generator.rs  mod.rs  prover.rs  verifier.rs
proofs/src/convert_to/: circuit.rs  generator.rs  mod.rs  prover.rs  verifier.rs
proofs/src/credential/: circuit.rs  generator.rs  mod.rs  prover.rs  verifier.rs
proofs/src/transfer/: circuit.rs  generator.rs  mod.rs  prover.rs  verifier.rs
