[package]
name = "demo"
version = "0.1.0"
authors = ["Tariq Bontekoe <tariq.bontekoe@tno.nl>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "^0.9"
blake2s_simd = "^0.5"
bls12_381 = "^0.4"
ff = "^0.9"
hex = "^0.4"
jubjub = "^0.6"
lazy_static = "^1.4"
primitives = { version = "0.1", path = "../primitives" }
proofs = { version = "0.1", path = "../proofs" }
rand = "^0.8"
ring = "^0.16"
