[package]
name = "primitives"
version = "0.1.0"
authors = ["Tariq Bontekoe <tariq.bontekoe@tno.nl>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "^0.9"
bitvec = "^0.20"
bit-vec = "^0.6"
blake2s_simd = "^0.5"
bls12_381 = "^0.4"
byteorder = "^1.4"
chrono = "^0.4"
ff = "^0.9"
group = "^0.9"
hex = "^0.4"
jubjub = "^0.6"
lazy_static = "^1.4"
pairing = "^0.19"
rand = "^0.8"
rand_core = "^0.6"
ring = "^0.16"
