[package]
name = "proofs"
version = "0.1.0"
authors = ["Tariq Bontekoe <tariq.bontekoe@tno.nl>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "^0.9"
bls12_381 = "^0.4"
ff = "^0.9"
group = "^0.9"
jubjub = "^0.6"
lazy_static = "^1.4"
primitives = { version = "0.1", path = "../primitives" }
rand = "^0.8"

[dev-dependencies]
rand_core = "^0.6"
rand_xorshift = "^0.3"
